--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   const getCachedData = async (cacheName , url) => {
     const cacheStorage = await caches.open(cacheName);
     const defaultRequest = new Request(url, { 
-      mode: 'no-cors',
+      mode: 'cors',
       headers: {
       'Access-Control-Allow-Origin': 'https://adomech.github.io'
       }
